fix: darken colors for a11y color contrast

--- a/themes/cypress/source/css/_partial/plugins.scss
+++ b/themes/cypress/source/css/_partial/plugins.scss
@@ -55,19 +55,19 @@ ul.plugins-list {
       color: white;
 
       &.badge-community {
-        background-color: #9c9c9c;
+        background-color: #737373;
       }
 
       &.badge-experimental {
-        background-color: #9f6bc7;
+        background-color: #965CC1;
       }
 
       &.badge-official {
-        background-color: #38b7cc;
+        background-color: #257E8E;
       }
       
       &.badge-verified {
-        background-color: #00bf88;
+        background-color: #00805B;
       }
     }
   }
